--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,9 @@
     "output"
   ],
   "dependencies": {
-    "purescript-prelude": "^3.3.0",
-    "purescript-console": "^3.0.0"
+    "purescript-console": "^3.0.0",
+    "purescript-node-http": "^4.2.0",
+    "purescript-prelude": "^3.3.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
