--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "purescript-aff": "^4.1.1",
+    "purescript-bouzuya-http-method": "^0.2.1",
     "purescript-console": "^3.0.0",
     "purescript-node-http": "^4.2.0",
     "purescript-prelude": "^3.3.0"
