--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "purescript-aff": "^4.1.1",
     "purescript-bouzuya-http-method": "^0.2.1",
+    "purescript-bouzuya-http-status-code": "^0.1.0",
     "purescript-console": "^3.0.0",
     "purescript-node-http": "^4.2.0",
     "purescript-node-process": "^5.0.0",
