--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "purescript-aff": "^4.1.1",
+    "purescript-argonaut": "^3.1.0",
     "purescript-bouzuya-http-method": "^0.2.1",
     "purescript-bouzuya-http-status-code": "^0.1.0",
     "purescript-console": "^3.0.0",
