--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,15 @@
     "purescript-bouzuya-http-method": "^0.2.1",
     "purescript-bouzuya-http-status-code": "^0.1.0",
     "purescript-console": "^3.0.0",
+    "purescript-halogen": "^3.1.3",
     "purescript-node-http": "^4.2.0",
     "purescript-node-process": "^5.0.0",
     "purescript-prelude": "^3.3.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
+  },
+  "resolutions": {
+    "purescript-arraybuffer-types": "^2.0.0"
   }
 }
