--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "purescript-halogen": "^3.1.3",
     "purescript-node-http": "^4.2.0",
     "purescript-node-process": "^5.0.0",
-    "purescript-prelude": "^3.3.0"
+    "purescript-prelude": "^3.3.0",
+    "purescript-halogen-vdom-string-renderer": "^0.2.2"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
