--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "purescript-halogen-vdom-string-renderer": "^0.2.2"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^3.0.0",
+    "purescript-test-unit": "13.0.0"
   },
   "resolutions": {
     "purescript-arraybuffer-types": "^2.0.0"
