--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nodemon": "^1.18.6",
     "npm-run-all": "^4.1.3",
     "pulp": "^12.3.0",
-    "purescript": "^0.11.7",
+    "purescript": "^0.12.5",
     "rimraf": "^2.6.2"
   },
   "homepage": "https://github.com/bouzuya/tamaru#readme",
@@ -28,13 +28,14 @@
   },
   "scripts": {
     "bower:install": "bower install",
+    "bower:prune": "bower prune",
     "build": "npm-run-all -p 'build:*'",
     "build:client": "npm-run-all -s 'build:client:dir' 'build:client:scripts'",
     "build:client:dir": "mkdirp public/scripts",
     "build:client:scripts": "pulp browserify --main Client.Main --optimise --to public/scripts/index.js",
     "build:server": "pulp build --main Server.Main",
     "clean": "rimraf .pulp-cache output",
-    "prepare": "npm-run-all -s bower:install clean build",
+    "prepare": "npm-run-all -s bower:install bower:prune clean build",
     "pulp": "pulp",
     "repl": "pulp repl",
     "start": "node --eval \"require('./output/Server.Main').main();\"",
